[package]
name = "rust-simple-parser"
version = "0.1.0"
authors = ["codermarcos <coder.marcos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_simple_parser"
path = "src/lib.rs"

[[bin]]
name = "rust-simple-parser"
path = "src/main.rs"
